<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_bot_notif"
        android:title="@string/nav_title_notif"
        android:icon="@drawable/ic_nav_notif"
        android:paddingRight="12dp"
        android:paddingLeft="12dp">

    </item>

    <item
        android:id="@+id/nav_bot_profile"
        android:title="@string/nav_title_profile"
        android:icon="@drawable/ic_nav_profile"
        android:paddingRight="12dp"
        android:paddingLeft="12dp">

    </item>

    <item
        android:id="@+id/nav_bot_create_bet"
        android:title="@string/nav_title_bet"
        android:icon="@drawable/ic_nav_bet"
        android:paddingRight="12dp"
        android:paddingLeft="12dp">

    </item>

    <item
        android:id="@+id/nav_bot_settings"
        android:title="@string/nav_title_settings"
        android:icon="@drawable/ic_nav_settings"
        android:paddingRight="12dp"
        android:paddingLeft="12dp">

    </item>

    <item
        android:id="@+id/nav_bot_contact"
        android:title="@string/nav_title_contact"
        android:icon="@drawable/ic_nav_contact"
        android:paddingRight="12dp"
        android:paddingLeft="12dp">

    </item>

</menu>